# astar_msa_rust

./: .gitignore  Cargo.toml  LICENSE.txt  Makefile  README.md
benches/: README.md
data/: README.md
data/seqs/NUC/RANDOM/: generate_random_sequence.sh
data/seqs/NUC/RANDOM/3 seqs/: 100.fasta  1000.fasta  250.fasta  500.fasta
data/seqs/NUC/RANDOM/4 seqs/: 100.fasta  1000.fasta  250.fasta  500.fasta
data/seqs/NUC/RANDOM/5 seqs/: 100.fasta  1000.fasta  250.fasta  500.fasta
data/seqs/NUC/RANDOM/6 seqs/: 100.fasta  1000.fasta  250.fasta  500.fasta
examples/: README.md
examples/web-interface/: README.md  app.py
examples/web-interface/app/: config.py
src/: astar.rs  backtrace.rs  coord.rs  coord_hash.rs  cost.rs  heuristic_hpair.rs  lib.rs  msa_astar.rs  msa_options.rs  msa_pastar.rs  node.rs  pair_align.rs  pastar.rs  priority_list.rs  priority_types.rs  read_fasta.rs  sequences.rs  time_counter.rs
tests/: README.md
