[package]
name = "astar-msa-rust"
version = "3.0.0"
edition = "2024"
authors = ["Vinícius Manoel"]
license = "MIT"
description = "PA-Star: Parallel A-Star for Multiple Sequence Alignment"

[[bin]]
name = "msa_astar"
path = "src/msa_astar.rs"

[[bin]]
name = "msa_pastar"
path = "src/msa_pastar.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rayon = "1.8"
ahash = "0.8"
parking_lot = "0.12"
crossbeam = "0.8"
once_cell = "1.19"
num_cpus = "1.16"
core_affinity = "0.8"
term_size = "0.3"
